--- a/indx4.css
+++ b/indx4.css
@@ -49,11 +49,29 @@ h1 {
 }
 
 .card-image {
-    height: 180px;
+    height: 150px;
 }
 #searchbar {
     width: 100%;
     height: 32px;
     padding: 5px 10px;
     font-size: 12px;
+}
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: #f4f4f4;
+  opacity: 0.95;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#closeBtn {
+  position:absolute;
+  top: 20px;
+  right: 20px;
+  background-color: pink;
 }
